# trabalho-final-cg

./: .gitignore  CMakeLists.txt  CMakePresets.json  COMPILACAO.md  PROMPTS.md  README.md  SPEC.md
data/: FONTES.txt  floor.jfif
include/: collisions.h
src/: collisions.cpp  main.cpp  shader_fragment.glsl  shader_vertex.glsl  textrendering.cpp
src/engine/: Application.cpp  Application.h  Audio.cpp  Audio.h  Camera.cpp  Camera.h  DebugText.cpp  DebugText.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/entities/: AnimatedModel.cpp  AnimatedModel.h  CamouflagedPursuer.cpp  CamouflagedPursuer.h  NPC.cpp  NPC.h  Player.cpp  Player.h
src/rendering/: Material.h  Mesh.cpp  Mesh.h  WorldRenderer.cpp  WorldRenderer.h
src/utils/: Bezier.h  Constants.h  FileUtils.cpp  FileUtils.h
src/world/: Corridor.cpp  Corridor.h  TeleportSystem.cpp  TeleportSystem.h
